crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_block-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ (testing; }
---

Some(
    Spanned(
        Block(
            Spanned(
                [],
                0..13,
            ),
        ),
        0..13,
    ),
)

--- Errors ---
[
    ParseError {
        span: 10..11,
        reason: ExpectedFound {
            expected: [
                Plus,
                Minus,
                Star,
                Slash,
                Eq,
                OpenParen,
                CloseParen,
                OpenBrace,
            ],
            found: Some(
                Semi,
            ),
        },
    },
]
---
