crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_block-3.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ {testing; }
---

None

--- Errors ---
[
    ParseError {
        span: 12..13,
        reason: ExpectedFound {
            expected: [
                Semi,
                Expression,
                Function,
                Module,
                Binding,
            ],
            found: Some(
                CloseBrace,
            ),
        },
    },
]
---
