crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_block-4.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ testing ]}
---

Some(
    Spanned(
        Block(
            Spanned(
                [],
                0..12,
            ),
        ),
        0..12,
    ),
)

--- Errors ---
[
    ParseError {
        span: 10..11,
        reason: ExpectedFound {
            expected: [
                Semi,
                Plus,
                Minus,
                Star,
                Slash,
                Eq,
                OpenParen,
                OpenBrace,
            ],
            found: Some(
                CloseBracket,
            ),
        },
    },
]
---
