crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_block.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ /&$/&/$ }
---

Some(
    Spanned(
        Block(
            Spanned(
                [],
                0..11,
            ),
        ),
        0..11,
    ),
)

--- Errors ---
[
    ParseError {
        span: 2..3,
        reason: ExpectedFound {
            expected: [
                CloseBrace,
                Expression,
                Function,
                Module,
                Binding,
            ],
            found: Some(
                Slash,
            ),
        },
    },
]
---
