crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_call-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(,)(correct_one, 2)(, aerr, "stuff")
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Call {
                    func: Spanned(
                        Call {
                            func: Spanned(
                                Ident(
                                    Spanned(
                                        "testing",
                                        0..7,
                                    ),
                                ),
                                0..7,
                            ),
                            args: Spanned(
                                [
                                    Spanned(
                                        Error,
                                        7..10,
                                    ),
                                ],
                                7..10,
                            ),
                        },
                        0..10,
                    ),
                    args: Spanned(
                        [
                            Spanned(
                                Ident(
                                    Spanned(
                                        "correct_one",
                                        11..22,
                                    ),
                                ),
                                11..22,
                            ),
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(2),
                                        24..25,
                                    ),
                                ),
                                24..25,
                            ),
                        ],
                        10..26,
                    ),
                },
                0..26,
            ),
            args: Spanned(
                [
                    Spanned(
                        Error,
                        26..43,
                    ),
                ],
                26..43,
            ),
        },
        0..43,
    ),
)

--- Errors ---
[
    ParseError {
        span: 8..9,
        reason: ExpectedFound {
            expected: [
                CloseParen,
                Expression,
            ],
            found: Some(
                Comma,
            ),
        },
    },
    ParseError {
        span: 27..28,
        reason: ExpectedFound {
            expected: [
                CloseParen,
                Expression,
            ],
            found: Some(
                Comma,
            ),
        },
    },
]
---
