crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_call-3.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(1 2 3)
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Ident(
                    Spanned(
                        "testing",
                        0..7,
                    ),
                ),
                0..7,
            ),
            args: Spanned(
                [
                    Spanned(
                        Error,
                        7..14,
                    ),
                ],
                7..14,
            ),
        },
        0..14,
    ),
)

--- Errors ---
[
    ParseError {
        span: 10..11,
        reason: ExpectedFound {
            expected: [
                Comma,
                Plus,
                Minus,
                Star,
                Slash,
                Eq,
                OpenParen,
                CloseParen,
            ],
            found: Some(
                Int(
                    2,
                ),
            ),
        },
    },
]
---
