crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_call-4.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(1 + / 2)
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Ident(
                    Spanned(
                        "testing",
                        0..7,
                    ),
                ),
                0..7,
            ),
            args: Spanned(
                [
                    Spanned(
                        Error,
                        7..16,
                    ),
                ],
                7..16,
            ),
        },
        0..16,
    ),
)

--- Errors ---
[
    ParseError {
        span: 12..13,
        reason: ExpectedFound {
            expected: [
                Minus,
                Bang,
                Group,
                Identifier,
                Literal,
            ],
            found: Some(
                Slash,
            ),
        },
    },
]
---
