crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_call.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(,)
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Ident(
                    Spanned(
                        "testing",
                        0..7,
                    ),
                ),
                0..7,
            ),
            args: Spanned(
                [
                    Spanned(
                        Error,
                        7..10,
                    ),
                ],
                7..10,
            ),
        },
        0..10,
    ),
)

--- Errors ---
[
    ParseError {
        span: 8..9,
        reason: ExpectedFound {
            expected: [
                CloseParen,
                Expression,
            ],
            found: Some(
                Comma,
            ),
        },
    },
]
---
