crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_group-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(1 +)
---

Some(
    Spanned(
        Error,
        0..5,
    ),
)

--- Errors ---
[
    ParseError {
        span: 4..5,
        reason: ExpectedFound {
            expected: [
                Minus,
                Bang,
                Group,
                Identifier,
                Literal,
            ],
            found: Some(
                CloseParen,
            ),
        },
    },
]
---
