crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_group.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(testing;)
---

Some(
    Spanned(
        Error,
        0..10,
    ),
)

--- Errors ---
[
    ParseError {
        span: 8..9,
        reason: ExpectedFound {
            expected: [
                Plus,
                Minus,
                Star,
                Slash,
                Eq,
                OpenParen,
                CloseParen,
                OpenBrace,
            ],
            found: Some(
                Semi,
            ),
        },
    },
]
---
