crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_if-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if (1} then _
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Error,
                0..11,
            ),
            then_branch: Spanned(
                Ident(
                    Spanned(
                        "_",
                        12..13,
                    ),
                ),
                12..13,
            ),
            else_branch: None,
        },
        0..13,
    ),
)

--- Errors ---
[
    ParseError {
        span: 5..6,
        reason: ExpectedFound {
            expected: [
                Plus,
                Minus,
                Star,
                Slash,
                Eq,
                OpenParen,
                CloseParen,
            ],
            found: Some(
                CloseBrace,
            ),
        },
    },
]
---
